--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.17.0",
 		"@rdkit/rdkit": "^2024.3.5-1.0.0",
+		"argon2": "^0.41.1",
 		"ketcher-core": "^2.21.0"
 	}
 }
