--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.13",
 		"autoprefixer": "^10.4.19",
+		"jsonwebtoken": "^9.0.2",
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -34,6 +35,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.17.0",
 		"@rdkit/rdkit": "^2024.3.5-1.0.0",
+		"@types/jsonwebtoken": "^9.0.7",
 		"argon2": "^0.41.1",
 		"ketcher-core": "^2.21.0"
 	}
